[package]
name = "artnet_to_opendmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artnet_protocol = "0.4.1"
local-ip-address = "0.5.1"
log = "0.4.17"
log-panics = { version = "2.1.0" }
open_dmx = "0.1.3"
serialport = "4.2.0"
simple_logger = "4.0.0"
socket2 = { version = "0.5.1", features = ["all"] }
