[package]
name = "artnet_to_opendmx"
authors = ["David Bühler"]
license = "MIT"
edition = "2021"
description = "A simple artnet to opendmx bridge"
repository = "https://github.com/daveiator/artnet_to_opendmx"
keywords = ["dmx","open_dmx","lighting", "artnet", "cli"]
categories = ["multimedia"]


version = "0.2.0"

[dependencies]
artnet_protocol = "0.4.1"
artnet_reciever = "0.3.0"
eframe = "0.21.3"
local-ip-address = "0.5.1"
log = "0.4.17"
log-panics = { version = "2.1.0" }
open_dmx = "1.0.1"
serial = "0.4.0"
serialport = "4.2.0"
simple_logger = "4.0.0"
socket2 = { version = "0.5.1", features = ["all"] }
image = "0.24.6"

[build-dependencies]
winres = "0.1.8"