[package]
name = "artnet_to_opendmx"
authors = ["David Bühler"]
license = "MIT"
edition = "2021"
description = "A simple artnet to opendmx bridge"
repository = "https://github.com/daveiator/artnet_to_opendmx"
keywords = ["dmx","open_dmx","lighting", "artnet", "cli"]
categories = ["multimedia"]


version = "1.0.0"

[dependencies]
artnet_protocol = "0.4.2"
artnet_reciever = "0.3.0"
eframe = "0.26.2"
local-ip-address = "0.6.0"
log = "0.4.20"
log-panics = { version = "2.1.0" }
open_dmx = "1.0.1"
serial = "0.4.0"
serialport = "4.3.0"
simple_logger = "4.3.3"
socket2 = { version = "0.5.6", features = ["all"] }
image = "0.24.9"

[build-dependencies]
winres = "0.1.12"